--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lourdes Hernandez Martinez",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
